static/style.css
.h1 {
    font-size: 80px;
    font-family: 'Times New Roman', Times, serif;
    color : blue;
    margin: auto;
}

.VitalNest_heading{
    font-family: 'Times New Roman', Times, serif;
    color: white;
    font-size: 40px;
}

.login-background {
    background-image: url(https://media.istockphoto.com/id/2099357117/vector/heart-pulse-and-heartbeat-heartbeat-lone-cardiogram-beautiful-healthcare-medical-background.jpg?s=612x612&w=0&k=20&c=5agokqkO2Ls-JGCXC5eYl8mH_EO1ZnihZc-pEYtVBOI=);
    background-size: cover;
    display: flex;
    justify-content: center;
    text-items: center;
}

#register_btn{
    font-size: 4vmin;
    display: block;
    text-align: center;
    color:white;
}

.box{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 400px;
    width: 400px;
    border-radius: 1rem;
    background-color: rgb(182, 232, 255);

    font-size:4vmin;
}

.login_heading{
    display: flex;
    justify-content: center;
    padding-bottom : 50px ;
}


.login_label{
    display: flex;
    flex-direction: column;
    position: relative;
    bottom : 30px;
    padding-bottom: 30px; 
    gap: 1vmin;
} 

.login_label input {
    width : 300px;
    height : 30px;
}
 
.login_btn button{
    font-size : 20px;
    border-radius: 1rem;
    width : 100px;
}

.login_btn{
    position: relative;
    bottom: 15px;
    text-align: center;
}

.image-row {
  display: flex;
  justify-content: center;   
  gap: 100px;                 
  margin-top: 50px;
  flex-wrap: wrap;
}

.image-row img {
  width: 300px;
  height: 300px;
  border-radius: 15px;
  border: 0.5px solid black;
  object-fit: cover;
  transition: transform 0.3s ease; 
}

.image-row img:hover {
  transform: scale(1.05);    
}

.top-bar {
    display: flex;
    justify-content: flex-end; 
    align-items: center;
    padding: 15px 30px;
}

.top-bar a {
    margin-left: 20px;
    font-size: 18px;
    font-weight: bold;
    color: #000;
}

.top-bar a:hover {
    color: darkblue;
}

.header{
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 20px 10px;
}


.s_header{
    display : flex;
    text-align: left;
    background-color: rgb(54, 212, 159);
    padding : 20px;
    margin :10px;
}

.register_card_design{
    padding:10px;
    background-color: rgb(166, 235, 251);
    border-radius: 40px;
    text-align: center;
    width:auto;
    height: 450px;
    font-size: 20px;
    color: rgb(0, 0, 0);

}

.register_card_background{
    background-image: url("https://thumbs.dreamstime.com/b/illustration-hospital-registration-area-featuring-computers-reception-desk-plants-ideal-healthcare-related-designs-376121696.jpg");
    background-size: cover;

    
    height: 100vh;
    width: 100vw;
    justify-content: center;
    margin: 10px;

}

.register_card_button{
    background-color: rgb(57, 55, 179);
    border-radius: 20px;
    text-align: center;
    color:white;
    border-width: 0px;
    width: 20vw;
    height: 36px;

}

.register_card_text_design{
    font-family: "Bree Serif";
    color: rgb(52, 47, 47);
    text-align: center;
}

.register_card_form_design{
    font-family: "Bree Serif";
    color: black;
    text-align: center;
    font-size: 24px;
}

.admin_user_approval_card_heading{
    font-family: Georgia, 'Times New Roman', Times, serif;
    font-size: 36px;
    font-weight: bold;
    color: rgb(4, 4, 4);
    text-align: center;
}

.admin_user_approval_card_background{
    background-color: rgb(213, 187, 213);
    border-radius: 20px;
}

.admin_user_approval_card_design{
    font-family: 'Times New Roman', Times, serif;
    font-size: medium;
}

.admin_user_approval_card_accept_button_design{
    background-color: rgb(123, 246, 107);
    border-radius: 20px;
    text-align: center;
    color:rgb(0, 0, 0);
    border-width: 0px;
    width: 10vw;
    height: 36px;
}

.admin_user_approval_card_reject_button_design{
    background-color: rgb(229, 95, 83);
    border-radius: 20px;
    text-align: center;
    color:rgb(0, 0, 0);
    border-width: 0px;
    width: 10vw;
    height: 36px;
}
.admin_patient_record_card_design{
    background-color: beige;
    border-radius: 20px;
    width: 500px;
    height: 100px;
    margin: 20px auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 7px;

}

.admin_patient_record_button_design{
    background-color: rgb(65, 133, 182);
    border-radius: 20px;
    text-align: center;
    color:white;
    border-width: 0px;
    width: 10vw;
    height: 36px;

}

.industry_dashboard_main_heading{
    font-family: 'Times New Roman', Times, serif; 
    color: rgb(61, 1, 55); 
    font-size: 48px; 
    text-align: center;
}
.industry_dashboard_sub_heading{
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    color: rgb(93, 18, 163);
    font: size 30px; 
    margin: 20px;
}
.industry_dashboard_add_medicine_table{
    margin: 25px;
    background-color: rgb(217, 215, 255); 
    padding: 10px; 
    text-align: center; 
    font-size: 22px; 
    font-weight: 600;
}
.industry_dashboard_add_medicine{
    background-color: rgb(249, 255, 255);
    text-align: center;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-weight: 500;
    color: black;
    padding: 20px;
    margin: 20px;
    border-radius: 15px;
    width: 400px;
    border-color: rgb(27, 27, 27);
    
}

.industry_dashboard_add_medicine_button{
    background-color: rgb(57, 55, 179);
    border-radius: 20px;
    text-align: center;
    color:white;
    border-width: 0px;
    width: 12vw;
    height: 36px;
    font-size: 20px;
    font-weight: 500;
}

.industry_dashboard_add_medicine_update_button{
    background-color: rgb(137, 255, 163);
    border-radius: 5px;
    text-align: center;
    color:black;
    width: 8vw;
    height: 36px;
    font-size: 18px;
    font-weight: 400;
    border-width: 0px;
}

.industry_dashboard_add_medicine_remove_button{
    background-color: rgb(255, 137, 137);
    border-radius: 5px;
    text-align: center;
    color:black;
    width: 8vw;
    height: 36px;
    font-size: 18px;
    font-weight: 400;
    border-width: 0px;
}

.view_crowd_funding_backgroung_image{
    background-image: url("https://images.rawpixel.com/image_800/czNmcy1wcml2YXRlL3Jhd3BpeGVsX2ltYWdlcy93ZWJzaXRlX2NvbnRlbnQvbHIvdjg3MC10YW5nLTM2XzEuanBn.jpg");
    background-size: cover;
}

.view_crowd_funding_main_heading{
    font-family: Georgia, 'Times New Roman', Times, serif;
    font-size: 36px;
    font-weight: bold;
    text-align: center;
    color: rgb(63, 91, 115); 
}
.view_crowd_funding_button{
    background-color:#ebf9fa ;
    border-radius: 5px;
    color: rgb(25, 25, 58);
    font-size: 18px;
    font-weight: 400;
    text-align: center;
    width:auto;
    height: 36px;
    border-width: 1px;

}

.make_donation_card{
    background-color: rgb(220, 254, 223);
    border-radius: 15px;
    padding: 10px ;
    width: 400px;
    margin: 50px auto; 
    text-align: center;
    align-content: center;
    margin:auto;
    
}


.make_donation_card_form{
    color:rgb(63, 91, 115) ;
    font-size: 16px; 
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-weight: 500;
    display: flex;
    flex-direction: column;

}


.make_donation_sub_heading{
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    margin: 20px;
    color: rgb(63, 91, 115); 
    size: 65px;
}

.make_donation_card_donate_button{
    background-color:  rgb(63, 91, 115);
    color: white;
    border-radius:10px;
    text-align: center;
    width: auto;
    height: 36px;
    font-size: 18px;
    font-weight: 500;
}

.supplier_dashboard_request_button{
    background-color: rgb(86, 24, 141);
    color: white;
    border-radius: 10px;
    text-align: center;
    width: 10vw;
    height: 36px;
    font-size: 20px;
    font-weight: 500;
}

.supplier_dashboard_approve_button{
    background-color: rgb(123, 246, 107);
    text-align: center;
    color:rgb(0, 0, 0);
    border-width: 0px;
    width: 10vw;
    height: 36px;
    border-radius: 5px; 
    font-size: 18px;
    font-weight: 400;
}

.supplier_dashboard_reject_button{
    background-color: rgb(229, 95, 83);
    text-align: center;
    color:rgb(0, 0, 0);
    border-width: 0px;
    width: 10vw;
    height: 36px;
    border-radius: 5px;  
    font-size: 18px;
    font-weight: 400;
}

.view_log_data_button{
    background-color: rgb(86, 24, 141);
    color: white;
    border-radius: 10px;
    text-align: center;
    width: 10vw;
    height: 36px;
    font-size: 20px;
    font-weight: 500;
}

